# pyx

./: .gitignore  README.md
cpp/: CMakeLists.txt  call_so.cpp
py/: call_so.py
pyx/: build.sh  requirements.txt  setup.py
pyx/release/: my_fun.h
pyx/src/: my_fun.pyx
